# swarm_sim

./: .gitignore  README.md  Singularity  Singularityv2  arc3_qsub.sh  arc4_qsub.sh  build.sh  experiments_pipeline.sh  experiments_pipeline_s2s_u2s.sh  experiments_pipeline_scalability.sh  hpc_qsub.sh  hpc_qsub2.sh  hpc_start_simulation.py  hpc_start_simulation.sh  hpc_start_simulation2.py  mult_div_submission_loop.sh  myQsub_starter.sh  native_startup.sh  qrsh.sh  recompile.py  result_plotter.py  scalability_experiments.sh  setup.sh  setup_original.sh  start_simulation.py  start_simulation.sh  start_simulation2.py  test.sh  world_governor
compiled_plugins/: .placeholder
params/: param_search_n100_q40.csv  parameter_generator.py  params-chemx-var_s2s_u2s_queue.csv  params-var-s2s-u2s-chemx.csv  params.csv  params.ods  params_chemtxs_mechs.csv  params_erlebrain.csv  params_erlebrain_prob50fps.csv  params_erlebrain_pure.csv  params_icra2020_sim.csv  params_mSSD220_s2s_u2s.csv  params_model_s2s_u2s.csv  params_onerobot.csv  params_pi4.csv  params_pi4_prob50fps.csv  params_pi4_pure.csv  params_search_n100_q1.csv  params_var_qsize.csv  params_var_s2s_u2s.csv  params_var_s2s_u2s_1fps.csv  params_var_s2s_u2s_4fps.csv  params_var_s2s_u2s_5m.csv  params_var_s2s_u2s_5m120deg_1fps.csv  params_var_s2s_u2s_5m120deg_40fps.csv  params_var_s2s_u2s_5m120deg_4fps.csv  params_var_s2s_u2s_5m_1fps.csv  params_var_s2s_u2s_5m_4fps.csv  params_virtual_prob50fps.csv  params_virtual_pure.csv  paramsnegexp.csv  var_qsize.csv
params/p_folders/: dtstcrndwlk.csv  params (copy).csv  params (copy).txt  params.csv  params.txt.ods  params1.txt  params20180601.csv  params222.csv  params3.csv  params4.csv  params_empty.csv  params_repeller.csv  paramsexcel.ods
params/waypointsCSV/: 20180208_w_swarm1_circular_one_region_cluster.csv  20180208_w_swarm1_circular_two_region_cluster.csv  20180209_w_swarm1_circular_four_clusters.csv  20180209_w_swarm1_circular_half_cluster_half_uniform.csv  20180209_w_swarm1_circular_uniform_litter.csv
random-tests/: qsub.sh  qsub_starter.sh
sources/circular-boundary/: model.config  model.sdf  model.sdf.erb  model2.sdf
sources/comm_models/: comm_models  comm_models.cc  comm_models.hh  main.cpp  makefile
sources/m_4wrobot/: m_4wrobot.sdf  m_4wrobot.sdf.erb  m_4wrobot1.sdf  m_4wrobotrev.sdf.erb  m_4wrobotrev_inertial.sdf.erb  model.config
sources/m_boundary1/: boundary1.sdf  model.config
sources/m_litter/: litter.sdf  litter_plugin.cc  model.config
sources/m_nest/: CMakeLists.txt  model.config  nest.sdf  nest_plugin.cc
sources/mp_swarm1/: CMakeLists.txt  camera_sensor.cc  contact_sensor.cc  litter_sensor.cc  load_onupdate_random_walk.cc  misc.cc  motion_controllers.cc  mp_model_push_split.cc  mp_model_push_split.hh
sources/plugins/: CMakeLists.txt
sources/plugins/comm_models/: comm_models  comm_models.cc  comm_models.hh  main.cpp  makefile
sources/plugins/custom_msgs/comm_data/: CMakeLists.txt  comm_data.proto
sources/plugins/custom_msgs/robot_info/: CMakeLists.txt  robot_info.proto
sources/plugins/m_litter/: CMakeLists.txt
sources/plugins/m_nest/: CMakeLists.txt  nest_plugin.cc
sources/plugins/mp_swarm1/: CMakeLists.txt  home_controls.cc  litter_sensor.cc  load_onupdate_random_walk.cc  misc.cc  motion_controllers.cc  mp_model_push_split.cc  mp_model_push_split.hh
sources/plugins/utils/: utils.cc
sources/plugins/w_swarm1/: CMakeLists.txt  wp_swarm1.cc
sources/plugins/world_governor/: world_governor.cc
sources/w_swarm1/: CMakeLists.txt  rob_layout.rb  w_swarm1.world.erb  w_swarm1_m_4wrobot.world.erb  w_swarm1circle.world.erb  w_turtlebot.world  w_turtlebot.world.erb  wp_swarm1.cc
sources/w_swarm1/params/: params.csv  params.txt
sources/w_swarm1/world_db/: 20180208_w_swarm1_circular_one_region_cluster-white.world  (+28 more)
sources/world_governor/: CMakeLists.txt  world_governor.cc
(+107 files in other folders)
